# junction-2022-bonsai-app

./: README.md
api/: Cargo.toml  schema.sql
api/HTTP/: addTask.rest  authorizedGet copy 2.rest  authorizedGet copy.rest  authorizedGet.rest  createUser.rest  editTreePost.rest  gettasks.rest  login copy.rest  login.rest  register.rest
api/src/: authentication.rs  cors.rs  lib.rs
api/src/routes/: task.rs  user.rs
client/: exampledata.json  package-lock.json  package.json
client/src/: app.html
client/src/lib/: dataSchema.ts  menuTypes.ts
client/src/lib/assets/: dataSchema.ts  example2.json  exampledata.json  tree.json
client/src/lib/components/: Banner.svelte  Button.svelte  Leaf.svelte  LoginRegister.svelte  Menu.svelte  QuestionSlider.svelte  Slider.svelte  ToolTips.svelte  Tree.svelte  TreeNode.svelte  Vase.svelte
client/src/lib/icons/: Leaf1.svelte  Leaf2.svelte
client/src/lib/stores/: menu.ts  tree.ts  user.ts
client/src/lib/utils/: array.ts  number.ts  path.ts
client/src/routes/: +layout.svelte  +page.svelte  +page.ts
client/src/routes/bonsai/: +page.svelte
client/src/routes/login/: +page.svelte
client/src/routes/questionnaire/: +layout.svelte  +page.svelte
client/src/routes/register/: +page.svelte
