[package]
name = "bonsai-health"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-service = { version = "0.7.2", features = ["web-rocket"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
shuttle-shared-db = { version = "0.7.2", features = ["postgres"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "json"] }
jsonwebtoken = "8.1.1"
chrono = "0.4.22"
lazy_static = "1.4.0"
argon2 = "0.4.1"
